[platform] more comprehensible GC stats
GitOrigin-RevId: 2a4b390b8952717450fcfdfbf35a0eaf4044d3d3